[package]
name = "function_widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vectorize = "0.2.0"
egui = {version = "0.24.1", features = [
    "serde",
    "log"
] }
ordered_hash_map = "0.4.0"
runnable = { path = "../runnable" }
rhai = { version = "1.12.0", features = ["only_i64", "internals", "wasm-bindgen"] }