[package]
name = "rust_scripter"
version = "0.1.0"
authors = ["Aufar Zakiev <zaufar@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.  
] }
egui_extras = { version = "0.25.0", features = ["image", "syntect"] }
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
vectorize = "0.2.0"
indexmap = "2.1.0"
rhai = { version = "1.12.0", features = ["only_i64", "internals", "wasm-bindgen"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"